devops/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: user.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 4000

    - host: event.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: event-service
                port:
                  number: 4001

    - host: order.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 4002

    - host: payment.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 4003

    - host: review.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: review-service
                port:
                  number: 4004

    - host: catalog.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port:
                  number: 4005
